# leanlift

./: .gitignore  Cargo.toml  LeanliftIris.lean  README.md  SKILL.md  SPEC.md  ci.sh  fpga-report.json  verify-creusot.sh  verify-kani.sh  verify-m1m3.sh  verify.sh
docs/: FORMATS-fpga.md  FORMATS-models.md  PLAN-concurrency.md  PLAN-convergence.md  PLAN-fpga.md  PLAN-fupd.md  PLAN-models.md  PLAN-perf-demo.md  PLAN-proofs.md  PLAN-qnet-rta.md  PLAN-verification.md  RESULTS-model-sweep.md  SPEC-models.md  TESTING.md  TODO-concurrency.md  TUTORIAL.md  float-formats.md
examples/avg/: Avg.lean  avg.cpp
examples/bisect/: BisectProofs.lean  bisect.cpp
examples/cheb/: ChebEval.lean  cheb-eval.recipe.md  cheb_eval.cpp
examples/dot2/: dot2.cpp
examples/fadd/: Fadd.lean  Fadd32.lean  fadd.cpp  fadd32.cpp
examples/fdot/: Fdot4.lean  fdot4.cpp
examples/fpga/: fifo_link.aria.json  mutex_arbiter.aria.json  pipeline_demo.aria.json  protocol_bug.aria.json  (+8 more)
leanlift-iris/: CiAxioms.lean  LeanliftIris.lean  README.md  lake-manifest.json  lakefile.toml
leanproofs/: Leanproofs.lean  README.md  lake-manifest.json  lakefile.toml
scripts/: build_aeneas.sh  damping-certify.sh  depolarizing-certify.sh  depth-certify.sh  fpga-pipeline-sweep.sh  gemma-sweep.sh  global-certify.sh  link-sweep.sh  qnet-sweep.sh  serial-link-certify.sh  serial-link-sweep.sh  shared-workload-sweep.sh  tasks-sweep.sh  tensor-certify.sh
src/: compare.rs  examples.rs  frontend.rs  harness.rs  lang.rs  leanrt.rs  main.rs  oracle.rs  oracle_sol.rs  prove.rs  report.rs  sig.rs  vectors.rs
tests/: run.sh
(+123 files in other folders)
